--- a/public/styles.css
+++ b/public/styles.css
@@ -92,6 +92,7 @@ header {
 .card {
     background-color: var(--color-blue);
     display: grid;
+    cursor: pointer;
 }
 
 .card_image-container img {
@@ -157,4 +158,39 @@ iframe {
     height: 90%;
     position: absolute;
     top: 6%;
+}
+
+/* === FEATURED === */
+
+.featured-wrapper.card_image-container{
+    position: relative;
+}
+
+.featured {
+    background: #50fa7b;
+    color: #111;
+    padding: 2px 8px;
+    position: absolute;
+    right: 5px;
+    top: -10px;
+    border-radius: 16px;
+}
+
+/* === VIDEO PAGE === */
+
+.video {
+    margin: 0 auto;
+    max-width: 800px;
+}
+
+.card_video-container {
+    position: relative;
+    padding-top: 62.5%;
+}
+
+.card_video-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
 }
