--- a/views/classes.njk
+++ b/views/classes.njk
@@ -15,8 +15,11 @@
     <section class="cards">
         {% for item in items %}
         <div class="card" id="{{item.id}}">
-            <div class="card_image-container">
+            <div class="card_image-container {{ 'featured-wrapper' if item.featured}}">
                 <img src="https://img.youtube.com/vi/{{item.id}}/0.jpg" alt="Imagem de {{item.title}}">
+                {% if item.featured %}
+                    <div class="featured">Featured</div>
+                {% endif %}
             </div>
             <div class="card-content">
                 <p>{{item.title}}</p>
@@ -32,17 +35,5 @@
         
     </section>
 
-    <div class="modal-overlay">
-        <div class="modal">
-            <a class="close-modal">
-                <i class="material-icons">close</i>
-            </a>
-
-            <div class="modal-content">
-                <iframe src="" frameborder="0"></iframe>
-            </div>
-        </div>
-    </div>
-
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 {% endblock %}
