--- a/public/styles.css
+++ b/public/styles.css
@@ -93,10 +93,15 @@ header {
     background-color: var(--color-blue);
     display: grid;
     cursor: pointer;
+    border-radius: 16px;
+
 }
 
 .card_image-container img {
     width: 100%;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+
 }
 
 .card-content,
@@ -116,48 +121,6 @@ header {
     padding: 5px 20px;
     border-radius: 20px;
     text-align: center;
-}
-
-/* ===MODAL=== */
-
-.modal-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    opacity: 0;
-    visibility: hidden;
-}
-
-.modal {
-    background-color: white;
-    width: 90%;
-    height: 90%;
-    margin: 5vh auto;
-    position: relative;
-}
-
-.modal .close-modal {
-    color: black;
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    cursor: pointer;
-}
-
-/* ===MODAL.ACTIVE=== */
-
-.modal-overlay.active {
-    opacity: 1;
-    visibility: visible;
-}
-
-iframe {
-    width: 100%;
-    height: 90%;
-    position: absolute;
-    top: 6%;
 }
 
 /* === FEATURED === */
